# lapce-plugin-rust

./: Cargo.toml
src/: lib.rs
